--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
               }
             ],
             "styles": [
+              "src/assets/css/style.css",
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
@@ -109,5 +110,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
