--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.0.0",
     "crypto-js": "^4.2.0",
     "ng-recaptcha-2": "^14.0.0",
+    "ngx-doc-viewer": "^15.0.1",
     "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
