--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ng-select/ng-select": "^13.9.1",
     "crypto-js": "^4.2.0",
     "ng-recaptcha-2": "^14.0.0",
     "ngx-doc-viewer": "^15.0.1",
